tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_6.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((200 + x) DIV (- z));
               z := (- 2);
               x := x;
  (* error *)  q := r;
               q := (200 > 1);
               q := ((200 - (- y)) < ((+ 200) * (200 - 2)));
               q := ((((1 - 1223) MOD 1223) + (0 DIV x)) > (((0 MOD 1) + (z MOD 200)) - ((x DIV 200) MOD (x - 200))));
               q := ((+ 1223) >= 2);
               p := ((200 MOD 2) > y);
               r := ((x MOD z) < x)
END Test14.